# orderbook-rust

./: Cargo.toml  PERFORMANCE_OPTIMIZATIONS.md  README.md  sample_data.csv
benches/: data_ingestion_benchmarks.rs  orderbook_benchmarks.rs
examples/: csv_replay.rs  data_formats.rs  simulation_demo.rs
monitoring/: grafana_dashboard.json  orderbook_rules.yml  prometheus.yml
scripts/: profile_memory.sh  run_benchmarks.sh
src/: config.rs  data.rs  engine.rs  error.rs  lib.rs  logging.rs  memory.rs  metrics.rs  queue.rs  queue_fifo.rs  server.rs  sim.rs  time.rs  types.rs
