[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[lib]
name = "orderbook"
path = "src/lib.rs"

[[bin]]
name = "serve"
path = "src/bin/serve.rs"

[[example]]
name = "csv_replay"
path = "examples/csv_replay.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
csv = "1.3"

[dev-dependencies]
tempfile = "3.8"
