[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[lib]
name = "orderbook"
path = "src/lib.rs"

[[bin]]
name = "serve"
path = "src/bin/serve.rs"

[[example]]
name = "csv_replay"
path = "examples/csv_replay.rs"

[[example]]
name = "data_formats"
path = "examples/data_formats.rs"

[[example]]
name = "simulation_demo"
path = "examples/simulation_demo.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
csv = "1.3"
bincode = "1.3"
byteorder = "1.5"
rand = "0.8"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.8"
